docs/apache-airflow/1.10.8/_sources/_api/airflow/contrib/hooks/aws_sns_hook/index.rst.txt
:mod:`airflow.contrib.hooks.aws_sns_hook`
=========================================

.. py:module:: airflow.contrib.hooks.aws_sns_hook

.. autoapi-nested-parse::

   This module contains AWS SNS hook



Module Contents
---------------

.. py:class:: AwsSnsHook(*args, **kwargs)

   Bases: :class:`airflow.contrib.hooks.aws_hook.AwsHook`

   Interact with Amazon Simple Notification Service.

   
   .. method:: get_conn(self)

      Get an SNS connection



   
   .. method:: publish_to_target(self, target_arn, message, subject=None)

      Publish a message to a topic or an endpoint.

      :param target_arn: either a TopicArn or an EndpointArn
      :type target_arn: str
      :param message: the default message you want to send
      :param message: str
      :param subject: subject of message
      :type subject: str




